PR suggestions for compactableImpl
Co-authored-by: Keith Turner <kturner@apache.org>